--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/pradeept/Chat-Application#readme",
   "dependencies": {
+    "mongoose": "^7.2.2",
     "socket.io": "^4.6.2"
   }
 }
